Fix content overflowing page on short screens

--- a/css/style.css
+++ b/css/style.css
@@ -135,3 +135,17 @@ a:hover {
 
     text-decoration-color: var(--accent-color);
 }
+
+@media screen and (max-height: 500px) {
+	.content {
+		font-size: 3vh;
+	}
+
+	.content h1 {
+		font-size: 10vh;
+	}
+
+	.footer button {
+		padding: 2vh 4vh;
+	}
+}`
